more checkpoint, modified db structure to utilize 'wallets' and added MINio support with helper. Secrets are thrown here and there but hey its localhost. To work on secrets and auth soon.

--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -4,3 +4,7 @@ spring.datasource.username=databaseUser
 spring.datasource.password=databasePass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
+
+## MINIO/S3 CREDENTIALS ##
+minio.auth.accessKey=S3/MINIOACCESSKEY
+minio.auth.secretKey=S3/MINIOSECRETKEY
